--- a/android/assets/jsons/Translations/Units,Promotions.json
+++ b/android/assets/jsons/Translations/Units,Promotions.json
@@ -451,7 +451,7 @@
 		Italian:"Guerriero Mohawk"
 	}
 	
-	"+33% combat bonus in Forest/Jungle":{
+	"+Combat Bonus in Forest/Jungle 33%":{
 		Italian:"+33% Forza su Foreste o Giungle"
 	}
 	
