--- a/android/assets/jsons/Translations/Other.json
+++ b/android/assets/jsons/Translations/Other.json
@@ -473,6 +473,7 @@
 		Italian:"Prendi"
 		French:"Acquérir"
 		Russian:"Получить"
+		Simplified_Chinese:"变更为本城市所属"
 	}
 
 /////// Stats / Basics ressources
