--- a/android/assets/jsons/Translations/Policies.json
+++ b/android/assets/jsons/Translations/Policies.json
@@ -849,7 +849,7 @@
 		Russian:"+1 к счастью от каждого редкого ресурса"
 		Romanian:"+1 fericire din fiecare resursă de lux"
 		Spanish:"+1 felicidad por cada recurso de lujo"
-		Simplified_Chinese:"每个奢侈资源+1快乐"
+		Simplified_Chinese:"每种奢侈资源额外+1快乐"
 		Portuguese:"+1 Felicidade por cade recurso de luxo"
 		German:"+1 Zufriedenheit für jede Luxusresource"
 		French:"+1 Bonheur pour chaque ressource de luxe"
