--- a/android/assets/jsons/Translations/Other.json
+++ b/android/assets/jsons/Translations/Other.json
@@ -1671,7 +1671,7 @@
 		German:"Um zu gewinnen vervollständigen\nSie 4 Grundsatzzweige!"
 		French:"Completer 4 Doctrines pour gagner!"
 		Russian:"Завершите 4 ветви общественных институтов\n чтобы победить!"
-		Simplified_Chinese:"完全推行4项社会政策\n胜利！"
+		Simplified_Chinese:"完成4个社会政策分支\n胜利！"
 		Portuguese:"Complete 4 árvores de politicas para ganhar"
 	}
 
@@ -1775,14 +1775,14 @@
 	"Spaceship parts remaining":{
 		Italian:"Parti dell'astronave rimanenti"
 		French:"Parties de Vaisseau spatial manquantes"
-		Simplified_Chinese:"未完成建造的飞船组件数量"
+		Simplified_Chinese:"未完成建造的飞船组件"
 		Russian:"Осталось частей КК"
 	}
 
 	"Branches completed":{
 		Italian:"Rami completati"
 		French:"Branches complêtées"
-		Simplified_Chinese:"已完全推行的社会政策数量"
+		Simplified_Chinese:"已完成的社会政策分支"
 		Russian:"Ветвей завершено"
 	}
 
