--- a/android/assets/jsons/Translations/Buildings.json
+++ b/android/assets/jsons/Translations/Buildings.json
@@ -153,6 +153,7 @@
 	}
 	
 	"Free Technology":{
+		Simplified_Chinese:"获得1项免费科技"
 	}
 
 	"'Libraries are as the shrine where all the relics of the ancient saints, full of true virtue, and all that without delusion or imposture are preserved and reposed.' - Sir Francis Bacon":{
@@ -346,7 +347,7 @@
 		German:"Kostenloser Solzialgrundsatz"
 		Dutch:"Gratis sociaalbeleid"
 		Spanish:"Política social gratis"
-		Simplified_Chinese:"可免费推行1项社会政策"
+		Simplified_Chinese:"免费推行1项社会政策"
 		Portuguese:"Politica social gratis"
 		Polish:"Darmowy ustrój społeczny"
 	}
