modify battle damage calculation method about city attack. (#1141)

--- a/android/assets/jsons/Translations/Policies.json
+++ b/android/assets/jsons/Translations/Policies.json
@@ -630,7 +630,7 @@
 		Russian:"+1 культура за каждый монумент, храм и монастырь. Даёт бесплатный общественный институт"
 		Romanian:"+1 cultură pentru fiecare monument, templu sau mănăstire. Obține o politică gratuită"
 		Spanish:"+1 cultura por cada monumento, templo y monasterio. Ganas una política gratis"
-		Simplified_Chinese:"每座纪念碑、神庙和修道院+1文化，获得1次免费推行社会政策的机会"
+		Simplified_Chinese:"每座纪念碑、神庙和修道院+1文化，免费推行1项社会政策"
 		Portuguese:"+1 cultura por cada monumento, templo e monastério. Ganha uma apolítica grátis"
 		German:"+1 Kultur für jedes Monument, Kloster und Tempel; Ein kostenloser Grundsatz."
 		French:"+1 culture pour chaque monument, temple et monastère, donne une doctrine gratuite"
@@ -849,7 +849,7 @@
 		Russian:"+1 к счастью от каждого редкого ресурса"
 		Romanian:"+1 fericire din fiecare resursă de lux"
 		Spanish:"+1 felicidad por cada recurso de lujo"
-		Simplified_Chinese:"每个奢侈资源+1快乐"
+		Simplified_Chinese:"每种奢侈资源额外+1快乐"
 		Portuguese:"+1 Felicidade por cade recurso de luxo"
 		German:"+1 Zufriedenheit für jede Luxusresource"
 		French:"+1 Bonheur pour chaque ressource de luxe"
@@ -1005,7 +1005,7 @@
 		Russian:"Даёт 2 бесплатные технологии"
 		Romanian:"Obține 2 tehnologii gratuite"
 		Spanish:"Ganas 2 tecnologías gratis"
-		Simplified_Chinese:"给予2项免费科技"
+		Simplified_Chinese:"获得2项免费科技"
 		Portuguese:"Ganhe 2 tecnologias grátis"
 		German:"2 kostenlose Technologien"
 		French:"2 technologies gratuites"
