--- a/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
+++ b/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
@@ -658,7 +658,8 @@
 	
 	"Show minimap":{
 		Italian:"Mostra minimappa",
-		Simplified_Chinese:"显示小地图"
+		Simplified_Chinese:"显示小地图",
+		"Russian": "Показать миникарту"
 	}
 
 	"Fontset":{
