--- a/android/assets/jsons/Translations/Notifications.json
+++ b/android/assets/jsons/Translations/Notifications.json
@@ -574,14 +574,14 @@
 
  	"[nation] agreed to stop settling cities near us!": {
 		Italian:"[nation] ha promesso di smettere di fondare città vicino a noi!"
-		Simplified_Chinese:"[nation]同意停止在我们附近建城！",
-		"Russian": "[nation] согласилась прекратить заселять города рядом с нами!"
+		Simplified_Chinese:"[nation]同意停止在我们附近建城！"
+		Russian:"[nation] согласилась прекратить заселять города рядом с нами!"
 	},
 
  	"[nation] refused to stop settling cities near us!": {
 		Italian:"[nation] ha rifiutato di smettere di fondare città vicino a noi!"
-		Simplified_Chinese:"[nation]拒绝停止在我们附近建城！",
-		"Russian": "[nation] отказалась прекратить заселять города рядом с нами!"
+		Simplified_Chinese:"[nation]拒绝停止在我们附近建城！"
+		Russian:"[nation] отказалась прекратить заселять города рядом с нами!"
 	},
 	
 }
