--- a/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
+++ b/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
@@ -1249,7 +1249,7 @@
 		French:"Perse"
 		Portuguese:"Pérsia"
 		Simplified_Chinese:"波斯"
-		Russian:Персия
+		Russian:"Персия"
 	}
 	
 	"Darius I":{
